css in some screens and homepage
I'll finish later today, it's almost 4am and I need to sleep

--- a/Codigo/web/src/main/resources/templates/aluno-form.html
+++ b/Codigo/web/src/main/resources/templates/aluno-form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <link rel="stylesheet" href="/css/style.css">
 <head><title>Formulário de Aluno</title></head>
 <body>
 <h2 th:text="${aluno.rg == null} ? 'Novo Aluno' : 'Editar Aluno'"></h2>
