--- a/Codigo/web/src/main/resources/templates/aluno-home.html
+++ b/Codigo/web/src/main/resources/templates/aluno-home.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title>Home do Aluno</title></head>
+    <link rel="stylesheet" href="/css/style.css">
+    <body>
+        <header>
+            <div class="header-container">
+                <a href="/" class="home-link">
+                    <h1>Educoin</h1>
+                </a>
+                
+            </div>
+        </header>
 <body>
 <h1>Bem-vindo, <span th:text="${aluno.nome}"></span></h1>
 
