--- a/Codigo/web/src/main/resources/templates/professor-login.html
+++ b/Codigo/web/src/main/resources/templates/professor-login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <link rel="stylesheet" href="/css/style.css">
-<head><title>Cadastro de Aluno</title></head>
+
+<head><title>Login de professor</title></head>
 <body>
     <header>
         <div class="header-container">
@@ -11,13 +12,13 @@
             
         </div>
     </header>
-<h2>Cadastro de Aluno</h2>
-<form action="/alunos/cadastro" method="post" th:object="${aluno}">
-    <label>RG:</label><input type="text" th:field="*{rg}" required /><br/>
-    <label>Nome:</label><input type="text" th:field="*{nome}" required /><br/>
+<h2>Login de Professor</h2>
+<form action="/professores/login" method="post" th:object="${professor}">
+    <label>ID:</label><input type="text" th:field="*{id}" required /><br/>
     <label>Senha:</label><input type="password" th:field="*{senha}" required /><br/>
-    <button type="submit">Cadastrar</button>
+    <button type="submit">Entrar</button>
 </form>
-<p>Já tem conta? <a href="/alunos/login">Fazer login</a></p>
+<p>Não tem conta? <a href="/professores/cadastro">Cadastrar</a></p>
+<p th:if="${erro}" th:text="${erro}" style="color: red;"></p>
 </body>
 </html>
