--- a/Codigo/web/src/main/resources/templates/home.html
+++ b/Codigo/web/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
         <a href="/aluno-login">Sou aluno</a>
     </nav>
     <nav>
-        <a href="/professores-login">Sou professor</a>
+        <a href="/professor-login">Sou professor</a>
     </nav>
 </main>
 <footer>
