--- a/Codigo/web/src/main/resources/templates/aluno-list.html
+++ b/Codigo/web/src/main/resources/templates/aluno-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <link rel="stylesheet" href="/css/style.css">
 <head>
     <title>Lista de Alunos</title>
 </head>
