--- a/Codigo/web/src/main/resources/templates/empresa-form.html
+++ b/Codigo/web/src/main/resources/templates/empresa-form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <link rel="stylesheet" href="/css/style.css">
 <head><title>Formulário de Empresa</title></head>
 <body>
 <h2 th:text="${empresa.cnpj == null} ? 'Nova Empresa' : 'Editar Empresa'"></h2>
