--- a/Codigo/web/src/main/resources/templates/empresa-list.html
+++ b/Codigo/web/src/main/resources/templates/empresa-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    <link rel="stylesheet" href="/css/style.css">
 <head><title>Empresas Parceiras</title></head>
 <body>
 <h2>Lista de Empresas Parceiras</h2>
