--- a/Codigo/web/src/main/resources/templates/professor-login.html
+++ b/Codigo/web/src/main/resources/templates/professor-login.html
@@ -18,7 +18,7 @@
     <label>Senha:</label><input type="password" th:field="*{senha}" required /><br/>
     <button type="submit">Entrar</button>
 </form>
-<p>Não tem conta? <a href="/professor/cadastro">Cadastrar</a></p>
+<p>Não tem conta? <a href="/professores/cadastro">Cadastrar</a></p>
 <p th:if="${erro}" th:text="${erro}" style="color: red;"></p>
 </body>
 </html>
